<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/brown100"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/Default_Margin"
        android:background="@color/brown100"
        tools:context=".ActivityC">

        <!--
        This challenge is a simple Android Application with three Activities,
        the first Activity is the main Activity with two Buttons.
            Button 1 takes you to Activity B when clicked.
            Button 2 takes you to Activity C when clicked.

        Activity B is the About ALC page, it contains only a Webview
        that loads the URL https://andela.com/alc/ which is the ALC about page.

        Activity C is your profile, it contains an ImageView which should display your photo,
        TextViews showing your name, Track, Country, Email and Phone Number.
        -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="208dp"
            android:layout_height="243dp"
            android:layout_marginStart="@dimen/Standard_Margin"
            android:layout_marginLeft="@dimen/Standard_Margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/profilepic"
            android:foregroundGravity="center"
            android:src="@drawable/profilemain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Standard_Margin"
            android:layout_marginLeft="@dimen/Standard_Margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="30sp"
            android:textColor="@color/Blue"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Standard_Margin"
            android:layout_marginLeft="@dimen/Standard_Margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/track"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Standard_Margin"
            android:layout_marginLeft="@dimen/Standard_Margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/country"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="@dimen/Standard_Margin"
            android:layout_marginLeft="@dimen/Standard_Margin"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:text="@string/mail"
            android:textSize="16sp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="@dimen/Standard_Margin"
            android:layout_marginLeft="@dimen/Standard_Margin"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goToEmail"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="@dimen/Standard_Margin"
            android:layout_marginLeft="@dimen/Standard_Margin"
            android:layout_marginTop="24dp"
            android:text="@string/Phone"
            android:textSize="16sp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="@dimen/Standard_Margin"
            android:layout_marginLeft="@dimen/Standard_Margin"
            android:layout_marginTop="20dp"
            android:autoLink="phone"
            android:linksClickable="true"
            android:text="@string/phone_number"
            android:textSize="16sp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="@dimen/Standard_Margin"
            android:layout_marginLeft="@dimen/Standard_Margin"
            android:layout_marginTop="24dp"
            android:text="@string/slack"
            android:textSize="16sp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="@dimen/Standard_Margin"
            android:layout_marginLeft="@dimen/Standard_Margin"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goToSlack"
            android:text="@string/slack_username"
            android:textSize="16sp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/banner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:srcCompat="@drawable/alc_long" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contentDescription="@string/callicon"
            android:focusable="true"
            android:onClick="call"
            app:layout_constraintStart_toEndOf="@+id/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@android:drawable/sym_action_call" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>